--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article  id="Work" class="col-6 col-12-xsmall work-item">
-								<a href="images/thumbs/FRdashboard.jpg" class="image fit thumb"><img src="images/thumbs/FRdashboard.jpg" alt="" /></a>
+								<!--<a href="images/thumbs/FRdashboard.jpg" class="image fit thumb">-->
+								<img src="images/thumbs/FRdashboard.jpg" alt="" />
+								<!--</a>-->
 								<h3>HRIS and HRMS Project</h3>
 								<p>The Human Resource Information System and Human Resource Management System projects manages and control clients employee with various roles, HR dashboard, applicant listing, Jobs and Requisition listing, Positions, applicant statuses, applicant-boarding process, applicant profile, applicant acitvity, Applicant communications, Track Document and Training, Various Report pages and applicant tracking system used by diverese clients.</p>
 							</article>
